@startuml erd
hide circle
skinparam linetype ortho
skinparam classAttributeIconSize 0

entity "users" as users {
  *id : uuid <<PK>>
  --
  username : varchar(50) <<UQ>>
  email : varchar(255) <<UQ>>
  password_hash : varchar(255)
  avatar_url : text
  created_at : timestamptz
  updated_at : timestamptz
}

entity "builds" as builds {
  *id : uuid <<PK>>
  --
  user_id : uuid <<FK users.id>>
  creator_key : text
  name : varchar(100)
  character_id : varchar(100) <<FK characters.id>>
  notes : text
  is_public : boolean
  created_at : timestamptz
  updated_at : timestamptz
}

entity "build_pieces" as build_pieces {
  *id : uuid <<PK>>
  --
  build_id : uuid <<FK builds.id>>
  slot : varchar(10)
  set_id : varchar(100) <<FK relic_sets.id>>
  main_stat_id : varchar(50) <<FK stats.id>>
  main_stat_value : varchar(20)
  obtained : boolean
  drop_chance : numeric(24,12)
  UNIQUE(build_id, slot)
}

entity "build_substats" as build_substats {
  *id : uuid <<PK>>
  --
  piece_id : uuid <<FK build_pieces.id>>
  stat_id : varchar(50) <<FK stats.id>>
  upgrades : smallint
  quality : varchar(5)
  value : varchar(20)
  sort_order : smallint
}

entity "tags" as tags {
  *id : serial <<PK>>
  --
  name : varchar(50) <<UQ>>
}

entity "build_tags" as build_tags {
  *build_id : uuid <<FK builds.id>>
  *tag_id : integer <<FK tags.id>>
}

entity "build_likes" as build_likes {
  *build_id : uuid <<FK builds.id>>
  *user_id : uuid <<FK users.id>>
  created_at : timestamptz
}

entity "characters" as characters {
  *id : varchar(100) <<PK>>
  --
  name : varchar(100)
  icon_url : text
  splash_url : text
  rarity : smallint
  element : varchar(50)
  path : varchar(50)
  game_version : varchar(10)
  created_at : timestamptz
}

entity "relic_sets" as relic_sets {
  *id : varchar(100) <<PK>>
  --
  name : varchar(200)
  icon_url : text
  type : varchar(10)
  bonus_2pc : text
  bonus_4pc : text
  created_at : timestamptz
}

entity "relic_items" as relic_items {
  *id : varchar(100) <<PK>>
  --
  set_id : varchar(100) <<FK relic_sets.id>>
  slot : varchar(10)
  name : varchar(200)
  icon_url : text
}

entity "stats" as stats {
  *id : varchar(50) <<PK>>
  --
  name : varchar(100)
  unit : varchar(5)
  is_main : boolean
  is_sub : boolean
  sub_weight : smallint
}

users |o--o{ builds : "owns"
builds ||--|{ build_pieces : "contains"
build_pieces ||--o{ build_substats : "has"
builds ||--o{ build_tags : "tagged"
tags ||--o{ build_tags : "mapping"
users ||--o{ build_likes : "likes"
builds ||--o{ build_likes : "liked by"
characters ||--o{ builds : "for character"
relic_sets ||--|{ relic_items : "includes"
relic_sets |o--o{ build_pieces : "piece set"
stats |o--o{ build_pieces : "main stat"
stats ||--o{ build_substats : "sub stat"

note right of builds
is_public=true -> виден в /public
user_id может быть NULL (ON DELETE SET NULL)
end note

@enduml
